Prevent chosen select boxes rendering rtl
We don't want the chosen-enhanced select boxes to render with the
right-to-left selector as they look strange.

--- a/app/assets/stylesheets/admin/forms.scss
+++ b/app/assets/stylesheets/admin/forms.scss
@@ -42,6 +42,9 @@ form {
     input, textarea {
       direction: rtl;
     }
+    .chzn-container-multi input {
+      direction: ltr;
+    }
   }
 
   textarea, input {
